# Ksl

./: .directory  .gitignore  .gitinit  AUTHORS  Array.h  CMakeLists.txt  Ksl.pro  QSL.pro  QSL.pro.user.1fbd759  README.md  test.cpp
Gde/: Array1D.h  Gde.pro  Global.h  LinReg.cpp  LinReg.h  Math.h  main.cpp
Ksl/: Array1D.h  Chart.cpp  Chart.h  ChartItem.cpp  ChartItem_p.h  ChartLinscale.cpp  ChartLinscale.h  ChartLinscale_p.h  ChartScale.cpp  ChartScale.h  ChartScale_p.h  ChartView.cpp  Chart_p.h  Global.h  SeriesPlot.cpp  SeriesPlot.h  SeriesPlot_p.h  main.cpp
Ksl/Plot/: Chart.cpp  Chart.h  ChartView.cpp  ChartView.h  ChartView_p.h  Chart_p.h
demos/: CMakeLists.txt  cos.cpp  devtest.cpp  minimal.cpp  scatter.cpp  sine.cpp  sinusoidal.cpp  trigonometry.cpp
src/: CMakeLists.txt
src/Core/Ksl/: Array.h  Array_old.h  Csv.cpp  Csv.h  Csv_p.h  Functions.h  Global.cpp  Graph.h  MemoryPool.h  MemoryPool_p.h  Object.h  Object_p.h
src/Ksl/: Array.h  Canvas.cpp  Canvas.h  CanvasWindow.cpp  CanvasWindow.h  CanvasWindow_p.h  Canvas_p.h  Chart.cpp  Chart.h  ChartAxis.cpp  ChartAxis.h  ChartAxisSampler.cpp  ChartAxisSampler.h  ChartAxisSampler_p.h  ChartAxis_p.h  ChartEngine.cpp  ChartEngine.h  ChartEngine_p.h  ChartItem.cpp  ChartItem.h  ChartItem_p.h  ChartLabel.cpp  ChartLabel.h  ChartLabel_p.h  ChartLinscale.cpp  ChartLinscale.h  ChartLinscale_p.h  ChartScale.cpp  ChartScale.h  ChartView.cpp  ChartView.h  ChartView_p.h  ChartWindow.cpp  ChartWindow.h  ChartWindow_p.h  Chart_p.h  Figure.cpp  Figure.h  FigureItem.cpp  FigureItem.h  (+57 more)
src/Ksl/Regression/: Linear.cpp  Linear.h  Linear_p.h
src/Plotting/Ksl/: BasePlot.cpp  BasePlot.h  BasePlot_p.h  CanvasWindow.h  CanvasWindow_p.h  Chart.cpp  Chart.h  ChartWindow.cpp  ChartWindow.h  ChartWindow_p.h  Chart_p.h  FeaturePlot.cpp  FeaturePlot.h  FeaturePlot_p.h  Figure.cpp  Figure.h  FigureItem.cpp  FigureItem.h  FigureItem_p.h  FigureLegend.cpp  FigureLegend.h  FigureLegend_p.h  FigureScale.cpp  FigureScale.h  FigureScale_p.h  FigureWidget.cpp  FigureWidget.h  FigureWidget_p.h  Figure_p.h  ImagePlot.cpp  ImagePlot.h  ImagePlot_p.h  LinePlot.cpp  LinePlot.h  LinePlot_p.h  Plot.cpp  Plot.h  Plot_p.h  PolyPlot.cpp  PolyPlot.h  (+19 more)
src/QRC/: Icons.qrc
src/QSL/: Array1D.h  Array2D.h  ChartAxis.cpp  ChartAxis.h  ChartAxisPrivate.h  ChartAxisSampler.cpp  ChartAxisSampler.h  ChartAxisSamplerPrivate.h  Figure.cpp  Figure.h  FigureItem.cpp  FigureItem.h  FigureItemPrivate.h  FigurePrivate.h  FigureScale.cpp  FigureScale.h  FigureScalePrivate.h  FigureWidget.cpp  FigureWidget.h  FigureWidgetPrivate.h  Global.h  Integration.cpp  Integration.h  IntegrationPrivate.h  LinReg.cpp  LinReg.h  LinearFit.h  LinearRegression.cpp  LinearRegression.h  LinearRegressionPrivate.h  LinearScale.cpp  LinearScale.h  LinearScalePrivate.h  Object.h  ObjectPrivate.h  Random.cpp  Random.h  RandomPrivate.h  SimpleSeries.cpp  SimpleSeries.h  (+2 more)
src/QSL/gsl/: gsl_fit_linear.c
src/Regression/Ksl/: LinRegr.cpp  LinRegr.h  LinRegr_p.h  LineRegr.cpp  LineRegr.h  LineRegr_p.h  MultiLineRegr.cpp  MultiLineRegr.h  MultiLineRegr_p.h  MultiLinearRegr.cpp  MultiLinearRegr.h  MultiLinearRegr_p.h
src/gsl/: gsl_fit_linear.c  gsl_nan.h
src/include/ksl/: Object.h  Object_h.h
src/include/ksl/plot/: Axis.h  Axis_p.h  Chart.h  Chart_p.h  Figure.h  FigureItem.h  FigureItem_p.h  FigureScale.h  FigureScale_p.h  FigureView.h  FigureView_p.h  Figure_p.h  LinearScale.h  LinearScale_p.h  Object.h  Plot.h  Plot_p.h  Series.h  Series_p.h  Util.h
src/include/ksl/random/: Distribution.h  Distribution_p.h  Normal.h  Normal_p.h
src/ksl/plot/: Axis.cpp  Chart.cpp  Figure.cpp  FigureItem.cpp  FigureScale.cpp  FigureView.cpp  LinearScale.cpp  Plot.cpp  Series.cpp  Util.cpp  test.cpp
src/ksl/random/: Normal.cpp
src/qrc/: Icons.qrc
tests/: .directory  .quadtree.cpp.kate-swp  CMakeLists.txt  chart.cpp  dev.cpp  devtest.cpp  multifit.cpp  quadtree.cpp
(+3 files in other folders)
